Fixes for deployment